--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,36 @@
-<p>recipe-detail works!</p>
+<article class="recipe">
+  <h2 class="recipe__title">
+    {{ currentRecipe().name }}
+  </h2>
+
+  <p class="recipe__description">
+    {{ currentRecipe().description }}
+  </p>
+
+  <figure class="recipe__image">
+    <img [src]="currentRecipe().imgUrl" [alt]="currentRecipe().name" />
+  </figure>
+
+  <section class="recipe__ingredients">
+    <h3>Ingredienti</h3>
+    <ul>
+      @for (ingredient of adjustedIngredients(); track $index) {
+      <li class="recipe__ingredient">
+        <span class="recipe__ingredient-name">
+          {{ ingredient.name }}
+        </span>
+        <span class="recipe__ingredient-qty">
+          {{ ingredient.quantity }} {{ingredient.unit}}
+        </span>
+      </li>
+      }
+    </ul>
+  </section>
+</article>
+
+<section>
+  <div class="recipe__actions-group">
+    <button class="btn btn--secondary" (click)="onDecrementServings()">Decrement Servings</button>
+    <button class="btn btn--secondary" (click)="onIncrementServings()">Increment Servings</button>
+  </div>
+</section>
