--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,11 @@
-<h1>{{ title() }}</h1>
-<app-recipe-list/>
+<main class="app">
+  <header class="app__header">
+    <h1 class="app__title">
+      {{ title() }}
+    </h1>
+  </header>
+
+  <section class="app__content">
+    <app-recipe-list />
+  </section>
+</main>
