--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,13 +1,23 @@
 :host {
   display: block;
-  padding: 16px;
-  max-width: 480px;
-  margin: 0 auto;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  text-align: center; // centra i bottoni & titolo
+  padding: 24px 16px;
 }
 
-h1 {
+.app {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.app__header {
   margin-bottom: 24px;
-  font-size: 1.6rem;
+  text-align: center;
+}
+
+.app__title {
+  margin: 0;
+  font-size: 1.8rem;
+}
+
+.app__content {
+  display: block;
 }
