--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,36 +1,50 @@
 <article class="recipe">
-  <h2 class="recipe__title">
-    {{ recipe().name }}
-  </h2>
+  <header class="recipe__header">
+    <h2 class="recipe__title">
+      {{ recipe().name }}
+    </h2>
 
-  <p class="recipe__description">
-    {{ recipe().description }}
-  </p>
+    <p class="recipe__description">
+      {{ recipe().description }}
+    </p>
+  </header>
 
   <figure class="recipe__image">
     <img [src]="recipe().imgUrl" [alt]="recipe().name" />
   </figure>
 
   <section class="recipe__ingredients">
-    <h3>Ingredienti</h3>
-    <ul>
+    <h3 class="recipe__ingredients-title">Ingredienti</h3>
+    <ul class="recipe__ingredients-list">
       @for (ingredient of adjustedIngredients(); track $index) {
       <li class="recipe__ingredient">
         <span class="recipe__ingredient-name">
           {{ ingredient.name }}
         </span>
         <span class="recipe__ingredient-qty">
-          {{ ingredient.quantity }} {{ingredient.unit}}
+          {{ ingredient.quantity }} {{ ingredient.unit }}
         </span>
       </li>
       }
     </ul>
   </section>
-</article>
 
-<section>
-  <div class="recipe__actions-group">
-    <button class="btn btn--secondary" (click)="onDecrementServings()">Decrement Servings</button>
-    <button class="btn btn--secondary" (click)="onIncrementServings()">Increment Servings</button>
-  </div>
-</section>
+  <footer class="recipe__footer">
+    <div class="recipe__actions-group">
+      <button
+        class="btn btn--secondary"
+        type="button"
+        (click)="onDecrementServings()"
+      >
+        Decrement Servings
+      </button>
+      <button
+        class="btn btn--secondary"
+        type="button"
+        (click)="onIncrementServings()"
+      >
+        Increment Servings
+      </button>
+    </div>
+  </footer>
+</article>
