--- a/src/app/recipe-list/recipe-list.component.scss
+++ b/src/app/recipe-list/recipe-list.component.scss
@@ -35,9 +35,7 @@
   cursor: pointer;
   font: inherit;
   display: block;
-  transition:
-    background-color 0.15s ease,
-    transform 0.1s ease;
+  transition: background-color 0.15s ease, transform 0.1s ease;
 
   &:hover {
     background-color: #f0f0f0;
@@ -51,6 +49,15 @@
   &:focus-visible {
     outline: 2px solid #ff9800;
     outline-offset: 2px;
+  }
+
+  .star {
+    &::after {
+      content: '\2605';
+      font-size: 1.1rem;
+      color: gold;
+      display: inline-block;
+    }
   }
 }
 
