--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,16 +1,16 @@
 <article class="recipe">
   <header class="recipe__header">
     <h2 class="recipe__title">
-      {{ recipe().name }}
+      {{ recipe()?.name }}
     </h2>
 
     <p class="recipe__description">
-      {{ recipe().description }}
+      {{ recipe()?.description }}
     </p>
   </header>
 
   <figure class="recipe__image">
-    <img [src]="recipe().imgUrl" [alt]="recipe().name" />
+    <img [src]="recipe()?.imgUrl" [alt]="recipe()?.name" />
   </figure>
 
   <section class="recipe__ingredients">
@@ -31,18 +31,10 @@
 
   <footer class="recipe__footer">
     <div class="recipe__actions-group">
-      <button
-        class="btn btn--secondary"
-        type="button"
-        (click)="onDecrementServings()"
-      >
+      <button class="btn btn--secondary" type="button" (click)="onDecrementServings()">
         Decrement Servings
       </button>
-      <button
-        class="btn btn--secondary"
-        type="button"
-        (click)="onIncrementServings()"
-      >
+      <button class="btn btn--secondary" type="button" (click)="onIncrementServings()">
         Increment Servings
       </button>
     </div>
