feat/ui: add favorite toggle to add-recipe form
- add visual favorite toggle control to the add-recipe form
- style switch track, thumb and label to match existing app look
- keep the toggle presentational only for now, ready to be wired to isFavorite

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -34,6 +34,16 @@
           <input class="add-recipe__input" type="number" name="servings" min="1" value="1" />
         </label>
 
+        <div class="add-recipe__field add-recipe__field--toggle">
+          <span class="add-recipe__label">Segna come preferita</span>
+          <button class="add-recipe__toggle" type="button" aria-pressed="false">
+            <span class="add-recipe__toggle-track">
+              <span class="add-recipe__toggle-thumb"></span>
+            </span>
+            <span class="add-recipe__toggle-text">Favorite</span>
+          </button>
+        </div>
+
         <div class="add-recipe__field add-recipe__field--full">
           <div class="add-recipe__ingredients-header">
             <span class="add-recipe__label">Ingredienti</span>
