feat: refine routing and add-recipe UI flow
- adjust route definitions and matching (pathMatch full) to avoid empty detail views
- update navigation to align with /recipes/:id and /add-recipe flows
- add and style AddRecipe form (units select + favorite toggle UI)
- polish list/detail layout and CTA placement

--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -27,7 +27,7 @@
         <ul class="recipe-list__items">
           @for (recipe of filteredRecipe(); track recipe.id) {
           <li class="recipe-list__item">
-            <a class="recipe-list__link" [routerLink]="['/recipes', recipe.id]">
+            <a class="recipe-list__link" (click)="onSelectRecipe(recipe.id)">
               <span class="recipe-list__link-text">
                 {{ recipe.name }}
               </span>
