--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,5 @@
 <article class="recipe">
+  @if (recipe()) {
   <header class="recipe__header">
     <div class="recipe__header-top">
       <div class="recipe__header-text">
@@ -10,7 +11,6 @@
           {{ recipe()?.description }}
         </p>
       </div>
-
     </div>
   </header>
 
@@ -44,4 +44,10 @@
       </button>
     </div>
   </footer>
+  } @else {
+  <div class="recipe__empty">
+    <p class="recipe__empty-title">Nessuna ricetta selezionata</p>
+    <p class="recipe__empty-text">Scegli una ricetta dalla lista per vederne il dettaglio.</p>
+  </div>
+  }
 </article>
